[gd_scene load_steps=2 format=3 uid="uid://chdbea8mbh8qw"]

[ext_resource type="Script" uid="uid://bvadbb3sh1dy0" path="res://BranchingDialogueEditorTool/Scripts/choice_box.gd" id="1_4qt4k"]

[node name="ChoiceBox" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4qt4k")

[node name="DragAndMove" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 60.0
grow_vertical = 2

[node name="DragButtonCont" type="VBoxContainer" parent="DragAndMove"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="MoveUp" type="Button" parent="DragAndMove/DragButtonCont"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "^"

[node name="SelectIndex" type="OptionButton" parent="DragAndMove/DragButtonCont"]
layout_mode = 2

[node name="MoveDown" type="Button" parent="DragAndMove/DragButtonCont"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "v"

[node name="TextInput" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = 10.0
offset_right = -659.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Please enter the text for the choice..."
wrap_mode = 1
caret_blink = true

[node name="DestTopic" type="OptionButton" parent="."]
custom_minimum_size = Vector2(200, 80)
layout_mode = 0
offset_left = 514.0
offset_top = 10.0
offset_right = 764.0
offset_bottom = 90.0
alignment = 1
fit_to_longest_item = false
allow_reselect = true

[node name="Label" type="Label" parent="DestTopic"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_right = 93.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Select Destination Topic"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = 17.5
offset_right = -15.0
offset_bottom = -17.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "X"

[node name="ModifierEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 80)
layout_mode = 0
offset_left = 774.0
offset_top = 10.0
offset_right = 1014.0
offset_bottom = 90.0
placeholder_text = "Please Enter a Modifier IE buy"
alignment = 1
max_length = 30
emoji_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[connection signal="text_changed" from="TextInput" to="." method="_on_text_input_text_changed"]
[connection signal="item_selected" from="DestTopic" to="." method="_on_dest_topic_item_selected"]
[connection signal="text_changed" from="ModifierEdit" to="." method="_on_modifier_edit_text_changed"]
